tests/core/snapshots/graphql-datasource-with-mandatory-enum.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
enum EnumType {
  INFORMATION
  WARNING
}

type Post {
  severity: WithMandatoryEnum!
}

type Query {
  post: Post
}

type WithMandatoryEnum {
  type: EnumType!
}

schema {
  query: Query
}
