tests/core/snapshots/graphql-datasource-with-mandatory-enum.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

enum EnumType {
  INFORMATION
  WARNING
}

type Post {
  severity: WithMandatoryEnum!
}

type Query {
  post: Post @expr(body: {severity: {type: null}})
}

type WithMandatoryEnum {
  type: EnumType!
}
