tests/core/snapshots/grpc-override-url-from-upstream.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
}

schema {
  query: Query
}
