tests/core/snapshots/grpc-proto-with-same-package.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(port: 8000) @upstream @link(src: "foo.proto", type: Protobuf) @link(src: "bar.proto", type: Protobuf) {
  query: Query
}

type Bar {
  bar: String
}

type Foo {
  foo: String
}

type Query {
  bar: Bar! @grpc(url: "http://localhost:50051", method: "test.BarService.GetBar")
  foo: Foo! @grpc(url: "http://localhost:50051", method: "test.FooService.GetFoo")
}
