tests/core/snapshots/grpc-url-from-upstream.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

scalar PhoneNumber

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
