tests/core/snapshots/http-select.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Company {
  catchPhrase: String!
  name: String!
}

type Query {
  userCompany(id: Int!): Company
  userDetails(id: Int!): UserDetails
}

type UserDetails {
  city: String!
  id: Int!
  phone: String!
}

schema {
  query: Query
}
