tests/core/snapshots/io-cache.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String!
  id: Int!
  title: String!
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

type User {
  id: Int!
  name: String!
}

schema {
  query: Query
}
